[gd_scene load_steps=3 format=2]

[ext_resource path="res://source/menu/EditorScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/fonts/droid-sans/DroidSans24.tres" type="DynamicFont" id=2]

[node name="EditorScreen" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 860.0
margin_top = 335.0
margin_right = 1060.0
margin_bottom = 745.0
custom_constants/separation = 10

[node name="Back" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 60 )
custom_fonts/font = ExtResource( 2 )
text = "Back"

[node name="UnitEditor" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 200.0
margin_bottom = 130.0
rect_min_size = Vector2( 200, 60 )
custom_fonts/font = ExtResource( 2 )
text = "Units"

[node name="MapEditor" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 60 )
custom_fonts/font = ExtResource( 2 )
text = "Maps"

[node name="ScenarioEditor" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 210.0
margin_right = 200.0
margin_bottom = 270.0
rect_min_size = Vector2( 200, 60 )
custom_fonts/font = ExtResource( 2 )
text = "Scenarios"

[node name="CampaignEditor" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 280.0
margin_right = 200.0
margin_bottom = 340.0
rect_min_size = Vector2( 200, 60 )
custom_fonts/font = ExtResource( 2 )
text = "Campaigns"

[node name="Misc" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 350.0
margin_right = 200.0
margin_bottom = 410.0
rect_min_size = Vector2( 200, 60 )
custom_fonts/font = ExtResource( 2 )
text = "Miscellaneous"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/UnitEditor" to="." method="_on_UnitEditor_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MapEditor" to="." method="_on_MapEditor_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ScenarioEditor" to="." method="_on_ScenarioEditor_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CampaignEditor" to="." method="_on_CampaignEditor_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Misc" to="." method="_on_Misc_pressed"]
